add my edited section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             </div>
 
-            <div class="navbar-center hidden md:block">
+            <div onclick="handleShowCategoriestwo()" class="navbar-center hidden md:block">
                 <button class="btn btn-neutral rounded bg-gray-300 text-black border-none hover:bg-slate-500 capitalize ">Sort by view</button>
             </div>
 
@@ -50,7 +50,7 @@
         </section>
 
         <section>
-            <div id="card-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+            <div id="card-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 p-4">
             </div>
         </section>
 
